--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,5 @@
 @import "bootstrap";
+@import "font-awesome";
 @import "custom";
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
