--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FinanceApp7</title>
+    <title>FinanceApp</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -13,6 +13,7 @@
 
   <body>
   <%= render 'layouts/navigation' %>
+  <br>
   <div class="container">
     <%= render 'layouts/messages' %>
     <%= yield %>
