--- a/app/views/stocks/search.html.erb
+++ b/app/views/stocks/search.html.erb
@@ -3,7 +3,20 @@
     <div class="card card-header results-block">
       <strong>Symbol: </strong> <%= @stock.ticker %> <br>
       <strong>Name: </strong> <%= @stock.name %> <br>
-      <strong>Price: </strong> <%= @stock.last_price %>
+      <strong>Price: </strong> <%= @stock.last_price %> <br>
+      <% if current_user.can_track_stock?(@stock.ticker) %>
+        <%= link_to 'Add to portfolio', user_stocks_path(user: current_user, ticker: @stock.ticker),
+                    class: "btn btn-xs btn-success", data: { "turbo-method": :post } %>
+      <% else %>
+        <span class="badge rounded-pill text-bg-secondary">
+          You are already tracking
+          <% if current_user.stock_already_tracked?(@stock.ticker) %>
+            this stock
+          <% else !current_user.under_stock_limit? %>
+            10 stocks
+          <% end %>
+        </span>
+      <% end %>
     </div>
   <% end %>
 <% end %>
