Last/First name, SignUp/Edit, Friends view

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -18,6 +18,12 @@
   margin-bottom: 20px;
 }
 
-.logout-button {
-  margin-left: 80px;
+.form-group {
+  margin-bottom: 20px;
+}
+
+.user-name {
+  margin-left: 60px;
+  margin-top: 3.5%;
+  padding-right: 12px;
 }
