--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,6 +10,17 @@
         <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
       </div>
 
+      <div class="row g-2">
+        <div class="form-group col-md">
+          <%= f.label :first_name %>
+          <%= f.text_field :first_name, autocomplete: 'First name', class: 'form-control' %>
+        </div>
+        <div class="form-group col-md">
+          <%= f.label :last_name %>
+          <%= f.text_field :last_name, autocomplete: 'Last name', class: 'form-control' %>
+        </div>
+      </div>
+
       <div class="form-group">
         <%= f.label :password %>
         <%= f.password_field :password, autocomplete: 'current-password', class: 'form-control' %>
@@ -23,7 +34,6 @@
         <%= f.label :password_confirmation %>
         <%= f.password_field :password_confirmation, autocomplete: 'current-password', class: 'form-control' %>
       </div>
-
       <div class="form-group">
         <%= f.submit t('.sign_up'), class: 'btn btn-primary' %>
       </div>
