--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -16,14 +16,22 @@
             <% end %>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <% if request.path == my_friends_path %>
+              <%= link_to "Friends", my_friends_path, class: "nav-link active" %>
+            <% else %>
+              <%= link_to "Friends", my_friends_path, class: "nav-link" %>
+            <% end %>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
+              Profile
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li>
+                <%= link_to edit_user_registration_path, class: "dropdown-item" do %>
+                  <%= fa_icon 'edit' %> Edit profile
+                <% end %>
+              </li>
               <li><a class="dropdown-item" href="#">Another action</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#">Something else here</a></li>
@@ -38,6 +46,9 @@
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
         <ul class="navbar-nav ml-auto">
+          <li class="nav-item user-name">
+            <%= fa_icon 'user' %> <%= current_user.full_name %>
+          </li>
           <li class="nav-item">
             <%= link_to "Log out", destroy_user_session_path, class: "btn btn-danger logout-button", data: { "turbo-method": :delete } %>
           </li>
