--- a/app/views/friends/_list.html.erb
+++ b/app/views/friends/_list.html.erb
@@ -16,7 +16,10 @@
             <th scope="row"><%= friend.email %></th>
             <td><%= friend.first_name %></td>
             <td><%= friend.last_name %></td>
-            <td><%= link_to 'Stop following', "#", class: "btn btn-sm btn-danger" %></td>
+            <td>
+              <%= link_to 'View profile', user_path(friend), class: "btn btn-sm btn-success" %>
+              <%= link_to 'Stop following', friendship_path(friend), data: {'turbo-method': :delete, turbo_confirm: 'Are you sure?'}, class: "btn btn-sm btn-danger" %>
+            </td>
           </tr>
         <% end %>
         </tbody>
