--- a/app/views/stocks/_list.html.erb
+++ b/app/views/stocks/_list.html.erb
@@ -16,7 +16,27 @@
             <th scope="row"><%= stock.ticker %></th>
             <td><%= stock.name %></td>
             <td><%= stock.last_price %></td>
-            <td><%= link_to 'Remove', user_stock_path(stock), data: {'turbo-method': :delete, confirm: "Are you sure?"}, class: "btn btn-sm btn-danger" %></td>
+            <td>
+              <% if !@user.nil? %>
+                <% if current_user.id == @user.id %>
+                  <%= link_to 'Remove', user_stock_path(stock), data: {turbo_confirm: 'Are you sure?',  'turbo-method': :delete}, class: "btn btn-sm btn-danger" %>
+                <% else %>
+                  <% if current_user.can_track_stock?(stock.ticker) %>
+                    <%= link_to 'Add to portfolio', user_stocks_path(user: current_user, ticker: stock.ticker, show: true),
+                                class: "btn btn-sm  btn-success", data: { "turbo-method": :post } %>
+                  <% else %>
+                    <span class="badge rounded-pill text-bg-secondary">
+                      You are already tracking
+                      <% if current_user.stock_already_tracked?(stock.ticker) %>
+                        this stock
+                      <% else !current_user.under_stock_limit? %>
+                        10 stocks
+                      <% end %>
+                    </span>
+                  <% end %>
+                <% end %>
+              <%end %>
+            </td>
           </tr>
         <% end %>
         </tbody>
