--- a/app/views/users/my_friends.html.erb
+++ b/app/views/users/my_friends.html.erb
@@ -1,5 +1,24 @@
 <h1>Friends</h1>
 
-<%#= turbo_frame_tag "portfolio_stocks" do %>
+<div class="search-area">
+  <h3>Search Friends</h3>
+  <%= form_tag search_friend_path, method: :get do %>
+    <div class="form-group row">
+      <div class="col-sm-9 no-right-padding">
+        <%= text_field_tag :friend, params[:friend], placeholder: "Name or email", class: "form-control form-control-large"%>
+      </div>
+      <div class="col-sm-3 no-left-padding">
+        <%= button_tag type: :submit, class: "btn btn-success" do %>
+          <%= fa_icon 'search 1.5x' %>
+        <% end %>
+      </div>
+    </div>
+  <% end %>
+</div>
+
+<%= turbo_frame_tag "search_friend" do %>
+<% end %>
+
+<%= turbo_frame_tag "user_friends" do %>
   <%= render 'friends/list' %>
-<%# end %>
+<% end %>
