--- a/app/views/users/my_portfolio.html.erb
+++ b/app/views/users/my_portfolio.html.erb
@@ -5,7 +5,7 @@
   <%= form_tag search_stock_path, method: :get, data: {turbo_frame: "result_frame"} do %>
     <div class="form-group row">
       <div class="col-sm-9 no-right-padding">
-        <%= text_field_tag :stock, params[:stock], placeholder: "Stock ticker symbol", autofocus: true, class: "form-control form-control-large"%>
+        <%= text_field_tag :stock, params[:stock], placeholder: "Stock ticker symbol", class: "form-control form-control-large"%>
       </div>
       <div class="col-sm-3 no-left-padding">
         <%= button_tag type: :submit, class: "btn btn-success" do %>
